# Lynx-hallucination-detection

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: lynx-70b-mcli-inference-v1.yaml  lynx-70b-mcli-inference-v2.yaml  lynx-70b-train.yaml  lynx-8b-mcli-inference-v1.yaml  lynx-8b-mcli-inference-v2.yaml  lynx-8b-train.yaml  mcli_finetuning.md  mcli_inference.md  vllm_inference.md
configs/git_repo_example/: mcli_inference_v2.py
mcli/: lynx-70b-mcli-inference-v1.yaml  lynx-70b-mcli-inference-v2.yaml  lynx-70b-train.yaml  lynx-8b-mcli-inference-v1.yaml  lynx-8b-mcli-inference-v2.yaml  lynx-8b-train.yaml  mcli_finetuning.md  mcli_inference.md  vllm_inference.md
mcli/git_repo_example/: mcli_inference_v1.py
notebooks/: RAGTruth_data_generation.ipynb  evaluate-ragas.ipynb  evaluate_with_claude.ipynb  evaluate_with_gpt_4o.ipynb  pubmedqa_data_generation.ipynb
