[tool.poetry]
name = "patronus-lynx-hallucination-detection"
version = "0.1.0"
description = ""
authors = ["rebecca@patronus.ai", "sunitha@patronus.ai", "bartek@patronus.ai"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^1.26.4"
jupyter = "^1.0.0"
jupyterlab = "^4.2.1"
pydantic = "^2.7.2"
openai = "^1.30.4"
tiktoken = "^0.7.0"
mosaicml-cli = "^0.6.28"
transformers = "^4.41.2"
scikit-learn = "^1.5.0"
python-dotenv = "^1.0.1"
huggingface-hub = "^0.23.2"
torch = "^2.3.0"
diffusers = "^0.28.1"
accelerate = "^0.30.1"
peft = "^0.11.1"
structlog = "^24.2.0"
datasets = "^2.19.2"
boto3 = "^1.34.122"
anthropic = "^0.30.1"
vllm = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
